alterando para ingles

--- a/projeto/index.html
+++ b/projeto/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
@@ -13,7 +13,7 @@
   <body>
     <div id="container">
       <div id="profile">
-        <img src="assets/avatar.png" alt="Avatar de usuário">
+        <img src="assets/avatar.png" alt="User Avatar">
         <p>@gelzieny</p>
       </div>
 
@@ -25,17 +25,17 @@
       <ul>
         <li>
           <a href="https://dev.to/gelzieny" target="_blank" data-key="links.blog">
-            Veja meu blog
+            Check out my blog
           </a>
         </li>
         <li>
           <a href="https://github.com/Gelzieny" target="_blank" data-key="links.portfolio">
-            Veja meu portfólio
+            Check out my portfolio
           </a>
         </li>
         <li>
           <a href="mailto:gelzieny@example.com" target="_blank" data-key="links.contact">
-            Entre em contato
+            Get in touch
           </a>
         </li>
       </ul>
@@ -52,12 +52,12 @@
       </div>
 
       <footer data-key="footer">
-        Feito com ♥ pela Gelzieny
+        Made with ♥ by Gelzieny
       </footer>
     </div>
-    <!-- Botões de troca de idioma -->
+    <!-- Language switch buttons -->
     <div id="language-selector">
-      <button id="pt-btn">Português</button>
+      <button id="pt-btn">Portuguese</button>
       <button id="en-btn">English</button>
     </div>
 
